--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "highlight.js": "^10.0.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "sass-resources-loader": "^2.1.1",
     "typescript": "~3.9.3"
   }
 }
